src/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Widgets</relationshipLabel>
        <relationshipName>Widgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed</fullName>
                    <color>#009900</color>
                    <label>Deployed</label>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                    <color>#000099</color>
                    <label>Inventory</label>
                </value>
                <value>
                    <fullName>Maintenance Required</fullName>
                    <color>#CC0000</color>
                    <label>Maintenance Required</label>
                </value>
                <value>
                    <fullName>Diagnostics Required</fullName>
                    <color>#FFFF66</color>
                    <label>Diagnostics Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>